objects/Finance_Request__c.object
<CustomObject>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <formula>TEXT ( Opportunity__r.Utility_Company__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Utility Company listed on the Opportunity</inlineHelpText>
        <label>Utility Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Rate_kWh__c</fullName>
        <inlineHelpText>Current utility rate</inlineHelpText>
        <label>Utility Rate ( $/kWh )</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_Zone__c</fullName>
        <formula>TEXT (Opportunity__r.Utility_Zone__c )</formula>
        <inlineHelpText>pulls over from the Opportunity</inlineHelpText>
        <label>Utility Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <formula>Opportunity__r.Vertical__r.Name</formula>
        <inlineHelpText>Vertical listed on the Opportunity</inlineHelpText>
        <label>Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_1_O_M_amount__c</fullName>
        <inlineHelpText>1st year estimated O&amp;M amount</inlineHelpText>
        <label>Estimated Year 1 O&amp;M Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Production__c</fullName>
        <inlineHelpText>Enter year 1 production in kWh</inlineHelpText>
        <label>Year 1 Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_Production_kWh_PM__c</fullName>
        <formula>ProductionModeling__r.Annual_Production_MWh_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Production (kWh) from related Production Model</inlineHelpText>
        <label>Year 1 Production (kWh) from PM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Finance Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Finance Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Requests</pluralLabel>
    <recordTypes>
        <fullName>Final</fullName>
        <active>true</active>
        <description>Use for final finance request submittal to CC</description>
        <label>Final</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preliminary_Finance_Request</fullName>
        <active>true</active>
        <description>Use for preliminary requests</description>
        <label>Preliminary</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ineligible_Interconnection_Costs</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;New&quot;), ISNULL( Ineligible_Interconnection_EPC_watt__c ))</errorConditionFormula>
        <errorDisplayField>Ineligible_Interconnection_EPC_watt__c</errorDisplayField>
        <errorMessage>Enter the Ineligible Interconnection EPC $/watt costs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Finance_can_edit_the_PPA_Terms</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  
 $User.UserRoleId  &lt;&gt; &apos;2F00E340000021DaD&apos;, 
OR(ISCHANGED( Rating__c), ISCHANGED( PPA_Annual_Escalation_Rate__c ),ISCHANGED( Rejection_Notes__c ), ISCHANGED( PPA_Price__c)))</errorConditionFormula>
        <errorMessage>Only the Finance Team can edit the PPA Price and Rating</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_No_Rating</fullName>
        <active>false</active>
        <description>Reason for No Rating must be filled in if Rating Agency is &quot;none&quot;</description>
        <errorConditionFormula>AND(ISPICKVAL(Credit_Rating_Agency__c, &apos;None&apos;),  Reason_for_No_Rating__c =&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Reason_for_No_Rating__c</errorDisplayField>
        <errorMessage>Please give a reason for no credit rating.</errorMessage>
    </validationRules>
</CustomObject>